added a shopping cart logo to Products

--- a/ASP.NET Core MVC Identity.NET6/Views/Home/Privacy.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Home/Privacy.cshtml
@@ -2,8 +2,24 @@
     ViewData["Title"] = "Privacy Policy";
 }
 
-<div class="container vh-100">
-    <h1>@ViewData["Title"]</h1>
-    <p>Use this page to detail your site's privacy policy.</p>
+<div class="container-fluid border border-danger border-4 vh-100">
+    <div class="row">
+        <div class="col-md-3 border border-danger">
+            <h1>item 1</h1>
+            <h1>item 2</h1>
+        </div>
+        <div class="col-md-3">
+            <h1>item 3</h1>
+            <h1>item 4</h1>
+        </div>
+        <div class="col-md-3">
+            <h1>item 5</h1>
+            <h1>item 6</h1>
+        </div>
+        <div class="col-md-3">
+            <h1>item 7</h1>
+            <h1>item 8</h1>
+        </div>
+    </div>
 </div>
 
