--- a/ASP.NET Core MVC Identity.NET6/Views/Product/Index.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Product/Index.cshtml
@@ -42,8 +42,8 @@
                 <td>@product.CategoryID</td>
                 <td>@product.OnSale</td>
                 <td>@product.StockLevel</td>
+                <td><a href="/ShoppingCart/AddToCart/@product.ProductID"><i class="fa-solid fa-plus"></i> <i class="fa-solid fa-cart-shopping"></i></a></td>
             </tr>
-
         }
     </table>
 </div>
