--- a/ASP.NET Core MVC Identity.NET6/Views/OpenWeatherMap/GetWeather.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/OpenWeatherMap/GetWeather.cshtml
@@ -2,9 +2,9 @@
 @model Root
 
 
-<iframe width="650" height="450" src="https://embed.windy.com/embed2.html?lat=33.324&lon=-86.970&detailLat=33.324&detailLon=-86.970&width=650&height=450&zoom=5&level=surface&overlay=wind&product=ecmwf&menu=&message=&marker=&calendar=now&pressure=&type=map&location=coordinates&detail=&metricWind=default&metricTemp=default&radarRange=-1" frameborder="0"></iframe>
+@*<iframe width="650" height="450" src="https://embed.windy.com/embed2.html?lat=33.324&lon=-86.970&detailLat=33.324&detailLon=-86.970&width=650&height=450&zoom=5&level=surface&overlay=wind&product=ecmwf&menu=&message=&marker=&calendar=now&pressure=&type=map&location=coordinates&detail=&metricWind=default&metricTemp=default&radarRange=-1" frameborder="0"></iframe>*@
 
-@*
+
 @{
     int day = 1;
 }
@@ -146,4 +146,4 @@
             </div>
         }
     </div>
-</div>*@
+</div>
