--- a/ASP.NET Core MVC Identity.NET6/Views/Product/ViewProduct.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Product/ViewProduct.cshtml
@@ -13,7 +13,10 @@
     </tr>
 </table>
 
-<div class="btn btn-success">
+<div class="btn btn-success mx-2">
     @Html.ActionLink("Update", "UpdateProduct", "Product", new {id = Model.ProductID})
 </div>
 
+<div class="btn btn-danger">
+    @Html.ActionLink("Delete", "DeleteProduct", "Product", new {id = Model.ProductID})
+</div>
