--- a/ASP.NET Core MVC Identity.NET6/Views/Product/Index.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Product/Index.cshtml
@@ -3,15 +3,15 @@
 
 <div class="container-fluid text-white-50 mucho-margin-top">
     <div class="flex-row">
-        <h1 class="display-3 text-white">Products</h1>
+            <h1 class="display-3 text-white">Products</h1>
 
-        <form asp-action="Index" method="get">
-            <div class="form-actions no-color">
-                <h3>Find by name:</h3>
-                <input class="dark-form" type="text" name="SearchString" value="@ViewData["CurrentFilter"]" />
-                <input type="submit" value="Search" class="btn btn-outline-primary mx-2" />
-            </div>
-        </form>
+            <form asp-action="Index" method="get">
+                <div class="form-actions no-color">
+                    <h3>Find by name:</h3>
+                    <input class="dark-form" type="text" name="SearchString" value="@ViewData["CurrentFilter"]" />
+                    <input type="submit" value="Search" class="btn btn-outline-primary mx-2" />
+                </div>
+            </form>
 
         <a href="/Product/InsertProduct" >Create a new Product </a>
         
@@ -19,7 +19,7 @@
 
     <br />
 
-    <table id="productTable" class="table table-striped table-dark table-hover">
+    <table id="productTable" class="table  table-dark table-hover">
         <tr>
             <th>ProductID</th>
             <th>Name</th>
