--- a/ASP.NET Core MVC Identity.NET6/Views/Product/Index.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Product/Index.cshtml
@@ -33,11 +33,11 @@
             {
                 <tr>
                     <td><a href=/Product/ViewProduct/@product.ProductID>@product.ProductID</a></td>
-                    <td>@product.Name</td>
-                    <td>@product.Price</td>
-                    <td>@product.CategoryID</td>
-                    <td>@product.OnSale</td>
-                    <td>@product.StockLevel</td>
+                    <td><a href=/Product/ViewProduct/@product.ProductID>@product.Name</a></td>
+                    <td><a href=/Product/ViewProduct/@product.ProductID>@product.Price</a></td>
+                    <td><a href=/Product/ViewProduct/@product.ProductID>@product.CategoryID</a></td>
+                    <td><a href=/Product/ViewProduct/@product.ProductID>@product.OnSale</a></td>
+                    <td><a href=/Product/ViewProduct/@product.ProductID>@product.StockLevel</a></td>
                     <td><a href="/ShoppingCart/AddToCart/@product.ProductID"><i class="fa-solid fa-plus"></i> <i class="fa-solid fa-cart-shopping"></i></a></td>
                 </tr>
             }
