updated layout of weather pages

--- a/ASP.NET Core MVC Identity.NET6/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,4 +1,5 @@
-﻿
-<h1>Reset Password Confirm</h1>
+﻿<div class="display-4">
+    <h1>Reset Password Confirm</h1>
 
-<p>Password has been reset!</p>
+    <p>Password has been reset!</p>
+</div>
