--- a/ASP.NET Core MVC Identity.NET6/Views/Home/Index.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Home/Index.cshtml
@@ -14,8 +14,6 @@
             <p>Using the MVC pattern for websites, requests are routed to a Controller that is responsible for working with the Model to perform actions and/or retrieve data.
                 The Controller chooses the View to display and provides it with the Model. The View renders the final page, based on the data in the Model.</p>            
         </div>
-        <p class="text-center display-6">
-            <a href="https://learn.microsoft.com/aspnet/core/mvc/overview?WT.mc_id=dotnet-35129-website" target="_blank">Learn more about the MVC pattern</a>
-        </p>
+        <p class="text-center display-6 mt-5">Check out the demos above!</p>
     </div>
 </div>
