--- a/ASP.NET Core MVC Identity.NET6/Views/OpenWeatherMap/GetWeather.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/OpenWeatherMap/GetWeather.cshtml
@@ -25,6 +25,8 @@
                 <h5>@Model.List[0].Dt_txt</h5>
                 <p class="p-1">Cloudiness: @Model.List[0].Clouds.All%</p>
                 <p class="p-1">Temp: @Model.List[0].Main.Temp</p>
+                <p class="p-1">Humidity : @Model.List[0].Main.Humidity%</p>
+                <p class="p-1">- @Model.List[0].Weather[0].Description</p>
                 <img src="@GetWeatherIcon(Model.List[0].Pop)" />
             </div>
         </div>
@@ -33,6 +35,8 @@
                 <h5>@Model.List[8].Dt_txt</h5>
                 <p class="p-1">Cloudiness: @Model.List[8].Clouds.All%</p>
                 <p class="p-1">Temp: @Model.List[8].Main.Temp</p>
+                <p class="p-1">Humidity : @Model.List[8].Main.Humidity%</p>
+                <p class="p-1">- @Model.List[8].Weather[0].Description</p>
                 <img src="@GetWeatherIcon(Model.List[8].Pop)" />
             </div>
         </div>
@@ -41,6 +45,8 @@
                 <h5>@Model.List[16].Dt_txt</h5>
                 <p class="p-1">Cloudiness: @Model.List[16].Clouds.All%</p>
                 <p class="p-1">Temp: @Model.List[16].Main.Temp</p>
+                <p class="p-1">Humidity : @Model.List[16].Main.Humidity%</p>
+                <p class="p-1">- @Model.List[16].Weather[0].Description</p>
                 <img src="@GetWeatherIcon(Model.List[16].Pop)" />
             </div>
         </div>
@@ -49,6 +55,8 @@
                 <h5>@Model.List[24].Dt_txt</h5>
                 <p class="p-1">Cloudiness: @Model.List[24].Clouds.All%</p>
                 <p class="p-1">Temp: @Model.List[24].Main.Temp</p>
+                <p class="p-1">Humidity : @Model.List[24].Main.Humidity%</p>
+                <p class="p-1">- @Model.List[24].Weather[0].Description</p>
                 <img src="@GetWeatherIcon(Model.List[24].Pop)" />
             </div>
         </div>
@@ -57,6 +65,8 @@
                 <h5>@Model.List[32].Dt_txt</h5>
                 <p class="p-1">Cloudiness: @Model.List[32].Clouds.All%</p>
                 <p class="p-1">Temp: @Model.List[32].Main.Temp</p>
+                <p class="p-1">Humidity : @Model.List[32].Main.Humidity%</p>
+                <p class="p-1">- @Model.List[32].Weather[0].Description</p>
                 <img src="@GetWeatherIcon(Model.List[32].Pop)" />
             </div>
         </div>
